# hybrid-alife

./: .gitignore  EC_REPRODUCIBILITY_CHECKLIST.md  Makefile  README.md  hybrid-alife-implementation-blueprint.pplx.md  pyproject.toml
configs/: ablation_blind.yaml  ablation_curvature_obstacle.yaml  ablation_curvature_serpentine.yaml  ablation_delayed_sixth_sense.yaml  ablation_drifting_world.yaml  ablation_no_comms.yaml  ablation_no_memory.yaml  ablation_noisy_sixth_sense.yaml  ablation_shuffled_sixth_sense.yaml  ablation_static_world.yaml  ablation_true_sixth_sense.yaml  ablation_uniform_field.yaml  base.yaml  comm_task.yaml  lineage_growth.yaml  qd_active.yaml  scaling_tiny.yaml  smoke200.yaml  transfer_source.yaml  transfer_target_uniform.yaml
docs/: CI_VALIDATION.md  CONTINUATION_HANDOFF.md  GALLERY.md  KNOWLEDGE_BASE_HANDOFF.md  LONG_RUN_OPERATOR_RUNBOOK.md  RESULTS_REPORT_TEMPLATE.md  SCIENTIFIC_INTERPRETATION_GUIDE.md  agent_branches.md  architecture.md  campaign_cache_acceleration.md  comm_benchmark.md  experiment_campaign_quickstart.md  lineage_growth.md  poet_transfer.md  preregistration_template.md  qd_active.md  scientific_validation.md  visualization_quickstart.md  world_model.md
experiments/: smoke_hybrid_v1.md
notebooks/: explore_fields.ipynb
scripts/: generate_report.py  preflight_campaign.py  run_ablation_matrix.py  run_comm_benchmark.py  run_compute_scaling.py  run_quick_campaign.py  run_sim.py  run_transfer_matrix.py  visualize_run.py
tests/: conftest.py  test_agents_vm_depth.py  test_campaign_cache.py  test_cli_dry_run.py  test_config_load.py  (+13 more)
(+30 files in other folders)
